Fixes alignment of xprofile data in IE and other browsers that don't recognize :last-child. Just kidding, there are no other browsers that don't recognize :last-childe. Fixes #3222
git-svn-id: https://buddypress.svn.wordpress.org/trunk@4807 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -335,10 +335,10 @@ div#sidebar div.tags div#tag-text {
 3.0 - Non-structural
 --------------------------------------------------------------*/
 p {
-	margin-bottom: 15px;
+	margin-top: 15px;
 }
-p:last-child {
-	margin-bottom: 0;
+p:first-child {
+	margin-top: 0;
 }
 .accessibly-hidden {
 	left: -999em;
